tests/baselines/reference/promiseChaining1.errors.txt
tests/cases/compiler/promiseChaining1.ts(7,50): error TS2345: Argument of type '(x: S) => string' is not assignable to parameter of type '(x: S) => Function'.
  Signature '(x: S): Function' has no corresponding signature in '(x: S) => string'
    Type 'string' is not assignable to type 'Function'.
      Property 'apply' is missing in type 'String'.


==== tests/cases/compiler/promiseChaining1.ts (1 errors) ====
    // same example but with constraints on each type parameter
    class Chain2<T extends { length: number }> {
        constructor(public value: T) { }
        then<S extends Function>(cb: (x: T) => S): Chain2<S> {
            var result = cb(this.value);
            // should get a fresh type parameter which each then call
            var z = this.then(x => result)/*S*/.then(x => "abc")/*Function*/.then(x => x.length)/*number*/; // Should error on "abc" because it is not a Function
                                                     ~~~~~~~~~~
!!! error TS2345: Argument of type '(x: S) => string' is not assignable to parameter of type '(x: S) => Function'.
!!! error TS2345:   Signature '(x: S): Function' has no corresponding signature in '(x: S) => string'
!!! error TS2345:     Type 'string' is not assignable to type 'Function'.
!!! error TS2345:       Property 'apply' is missing in type 'String'.
            return new Chain2(result);
        }
    }